# o1-replication

./: .gitignore  .gitmodules  README.md  hello.py  pyproject.toml
prm800k/: generate_completions.py  preprocess.py
rl/: process_data.py  reward.py  train.py  train.sh
rl/grading/: grader.py
rl/sft/: prepare_data.py  run_sft.sh
rl/sft/prm800k/: .gitignore  generate_completions.py  preprocess.py  sft.py
