[project]
name = "o1-replication"
version = "0.1.0"
description = "replication of o1"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "matplotlib>=3.10.0",
    "openai>=1.59.8",
    "tenacity>=9.0.0",
    "tqdm>=4.67.1",
    "transformers>=4.48.0",
    "vllm==0.6.2",
    "xfinder>=0.1.1",
]
